--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:title" content="National Geographic: Stories of Animals, Nature, and Culture">
+    <meta property="og:image" content="https://www.nationalgeographic.com/content/dam/ngdotcom/rights-exempt/homepage/nationalgeographicog.ngsversion.1530540626597.adapt.1900.1.jpg">
+    <meta property="description" content="Explore National Geographic. A world leader in geography, cartography and exploration.">
+    <meta property="og:url" content="https://www.nationalgeographic.com">
     <title>Web portfolio de Johann Moreno</title>
   </head>
   <body>
