--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta property="og:title" content="National Geographic: Stories of Animals, Nature, and Culture">
-    <meta property="og:image" content="https://www.nationalgeographic.com/content/dam/ngdotcom/rights-exempt/homepage/nationalgeographicog.ngsversion.1530540626597.adapt.1900.1.jpg">
-    <meta property="description" content="Explore National Geographic. A world leader in geography, cartography and exploration.">
-    <meta property="og:url" content="https://www.nationalgeographic.com">
+    <meta property="og:title" content="Johann Moreno Full Stack Web Developer">
+    <meta property="og:image" content="https://e00-marca.uecdn.es/assets/v17/img/destacadas/marca__logo-generica.jpg">
+    <meta property="description" content="Web portfolio with my most updated info and projects.">
+    <meta property="og:url" content="https://web-portfolio-johann-moreno.herokuapp.com/">
     <title>Web portfolio de Johann Moreno</title>
   </head>
   <body>
