add thumb image

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="og:title" content="Johann Moreno Full Stack Web Developer">
-    <meta property="og:image" content="https://e00-marca.uecdn.es/assets/v17/img/destacadas/marca__logo-generica.jpg">
+    <meta property="og:image" content="https://web-portfolio-johann-moreno.herokuapp.com/images/web-portfolio-logo.png">
     <meta property="description" content="Web portfolio with my most updated info and projects.">
     <meta property="og:url" content="https://web-portfolio-johann-moreno.herokuapp.com/">
     <title>Web portfolio de Johann Moreno</title>
